fixed a sidebar overflow-y disappeared bug

--- a/themes/hexo-theme-iOS7/source/css/_partial/sidebar.styl
+++ b/themes/hexo-theme-iOS7/source/css/_partial/sidebar.styl
@@ -1,8 +1,9 @@
 #sidebar
   @media screen and (max-width: 900px)
     display none
+  @media screen and (max-height: 700px)
+    overflow-y auto
   display block
-  overflow-y auto
   background color-background
   border-right 1px solid rgb(200, 200, 200)
   height 100%
